--- a/state/_includes/header.html
+++ b/state/_includes/header.html
@@ -1,5 +1,7 @@
 <div class="logo">
   <a title="State - State machines made simple." href="{{ site.baseurl }}">{% include icon.svg %}</a>
+
+  <p>State - state machines made simple.</p>
 </div>
 <nav class="navigation">
   <ul>
